# conference_programme_explorer

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
datasets/: 20240621_EURO2024_conference_programme_rooms.csv  20240621_complete_EURO2024_conference_programme.csv
streamlitapp/: config.py  hello_world.py  programme_explorer.py
streamlitapp/components/: calendar.py
streamlitapp/data/: filter.py  load.py  utils.py
streamlitapp/optimizer/: max_session_utility.py
