[tool.poetry]
name = "conference-programme-explorer"
version = "0.1.0"
description = "Streamlit tutorial - building an interactive conference programme explorer"
authors = ["Sander Van Aken"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
pandas = "^2.2.2"
pulp = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
